--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -18,12 +18,8 @@
  */
 .main__heading,
 .main__heading--secondary {
-  color: color("dark-grey");
   padding: 1em 0;
   margin-top: 0;
-  font-size: 3em;
-  font-weight: 300;
-  text-transform: capitalize;
 
   @include respond-to("medium") {
     padding: 2em 0 0;
@@ -31,19 +27,34 @@
 }
 
 .main__heading {
+  color: color("dark-grey");
+  font-size: 4em;
+  text-align: center;
+  text-transform: capitalize;
+
   border-bottom: 5px solid color("pink");
   padding-bottom: .5em;
-  margin-bottom: .5em;
+  margin-bottom: 1em;
+
   background: color("yellow");
-  width: calc(100% + 2/3 * 2em);
-  margin-left: (-2 / 3 * 1em);
-  padding-left: (2 / 3 * 1em);
 }
 
 .main__heading--secondary {
-  font-size: 2.5em;
-  text-transform: capitalize;
+  font-size: 3em;
+  color: color("pink");
+  text-transform: uppercase;
+  font-weight: bold;
+
   padding-top: 0;
-  border-bottom: 5px solid color("light-grey");
-  padding-bottom: .5em;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: .15em;
+    height: .2em;
+    background-color: color("pink");
+  }
 }
