--- a/scss/partials/_item.scss
+++ b/scss/partials/_item.scss
@@ -216,6 +216,16 @@
 }
 
 /**
+ * Adds a preview of the variable if it is a colour
+ */
+.item__colour-preview {
+  @include size(2em);
+  @include absolute(top .75em right .75em);
+  @include card(1);
+  border-radius: 8px;
+}
+
+/**
  * Require's description
  */
 .item__requires-description {
