--- a/scss/partials/_item.scss
+++ b/scss/partials/_item.scss
@@ -216,9 +216,9 @@
 }
 
 /**
- * Adds a preview of the variable if it is a colour
+ * Adds a preview of the variable if it is a color
  */
-.item__colour-preview {
+.item__color-preview {
   @include size(2em);
   @include absolute(top .75em right .75em);
   @include card(1);
