--- a/scss/partials/_searchbar.scss
+++ b/scss/partials/_searchbar.scss
@@ -1,3 +1,6 @@
+/**
+ * Searchbar
+ */
 .searchbar {
   @include clearfix;
   display: inline-block;
@@ -9,6 +12,9 @@
   }
 }
 
+/**
+ * Searchbar form
+ */
 .searchbar__form {
   float: right;
   position: relative;
@@ -22,6 +28,9 @@
   }
 }
 
+/**
+ * Searchbar input
+ */
 .searchbar__field {
   border: none;
   padding: .5em;
@@ -31,6 +40,9 @@
   @include card(1);
 }
 
+/**
+ * Searchbar dropdown
+ */
 .searchbar__suggestions {
   @include absolute(top 100% right 0 left 0);
   @include card(1);
@@ -40,6 +52,9 @@
   list-style: none;
   z-index: z("default") + 1;
 
+  /**
+   * Hidden when empty
+   */
   &:empty {
     display: none;
   }
@@ -61,9 +76,7 @@
     padding: .5em;
     font-size: .9em;
 
-    &:focus,
-    &:active,
-    &:hover {
+    @include on-event {
       background: color("light-grey");
     }
   }
