--- a/scss/utils/_functions.scss
+++ b/scss/utils/_functions.scss
@@ -1,21 +1,16 @@
-/**
- * Returns the opposite direction of every direction in `$directions`.
- *
- * @param {List} $directions - Positions to revert
- *
- * @throws No opposite direction found for `$direction`.
- *
- * @return {List | Null}
- */
+/// Returns the opposite direction of every direction in `$directions`.
+/// @param {List} $directions - Positions to revert
+/// @throws No opposite direction found for `$direction`.
+/// @return {List | Null}
 @function opposite-direction($directions) {
   $opposite-directions: ();
   $direction-map: (
-    "top"    "bottom",
-    "right"    "left",
-    "bottom"    "top",
-    "left"    "right",
-    "ltr"       "rtl",
-    "rtl"       "ltr"
+    "top":    "bottom",
+    "right":    "left",
+    "bottom":    "top",
+    "left":    "right",
+    "ltr":       "rtl",
+    "rtl":       "ltr"
   );
 
   @each $direction in $directions {
@@ -31,17 +26,12 @@
 }
 
 
-/**
- * Clamp `$value` between `$min` and `$max`.
- *
- * @param {Number} $value - Value to clamp between `$min` and `$max`
- * @param {Number} $min   - Minimum value
- * @param {Number} $max   - Maximum value
- *
- * @throws All parameters must be numbers for `clamp`.
- *
- * @return {Number | Null}
- */
+/// Clamp `$value` between `$min` and `$max`.
+/// @param {Number} $value - Value to clamp between `$min` and `$max`
+/// @param {Number} $min   - Minimum value
+/// @param {Number} $max   - Maximum value
+/// @throws All parameters must be numbers for `clamp`.
+/// @return {Number | Null}
 @function clamp($value, $min, $max) {
   @if type-of($value) != "number" or type-of($min) != "number" or type-of($max) != "number" {
     @warn "All parameters must be numbers for `clamp`.";
@@ -52,22 +42,15 @@
 }
 
 
-/**
- * Helper to manage `z-index`.
- * Tries to fetch the z-index mapped to `$layer` in `$z-indexes` map.
- * If found, returns it, else returns `null`.
- *
- * @requires {variable} z-indexes
- *
- * @example scss
- * z-index: z("default")
- *
- * @param {String} $layer - Layer
- *
- * @throws No z-index found for `$layer`.
- *
- * @return {Number | Null}
- */
+/// Helper to manage `z-index`.
+/// Tries to fetch the z-index mapped to `$layer` in `$z-indexes` map.
+/// If found, returns it, else returns `null`.
+/// @requires {variable} z-indexes
+/// @example scss
+/// z-index: z("default")
+/// @param {String} $layer - Layer
+/// @throws No z-index found for `$layer`.
+/// @return {Number | Null}
 @function z($layer) {
   @if not map-has-key($z-indexes, $layer) {
     @warn "No z-index found for `#{$layer}`.";
@@ -77,21 +60,14 @@
 }
 
 
-/**
- * Color getter.
- *
- * @requires {variable} colors
- * @requires SassCore::map-has-key <http://sass-lang.com/documentation/Sass/Script/Functions.html#map_has_key-instance_method>
- *
- * @example scss
- * color: color("pink");
- *
- * @param {String} $color - Color to fetch
- *
- * @throws No color found for `$color`. Please make sure it is defined in `$colors` map.
- *
- * @return {Color | Null}
- */
+/// Color getter.
+/// @requires {variable} colors
+/// @requires SassCore::map-has-key <http://sass-lang.com/documentation/Sass/Script/Functions.html#map_has_key-instance_method>
+/// @example scss
+/// color: color("pink");
+/// @param {String} $color - Color to fetch
+/// @throws No color found for `$color`. Please make sure it is defined in `$colors` map.
+/// @return {Color | Null}
 @function color($color) {
   @if not map-has-key($colors, $color) {
     @warn "No color found for `#{$color}`. "
@@ -102,25 +78,17 @@
 }
 
 
-/**
- * Tests whether the value is a valid length.
- *
- * @param {*} $value - Value to test
- *
- * @return {Bool}
- */
+/// Tests whether the value is a valid length.
+/// @param {*} $value - Value to test
+/// @return {Bool}
 @function is-valid-length($value) {
   @return (type-of($value) == "number" and not unitless($value)) or index("auto" "initial" "inherit" 0, $value);
 }
 
 
-/**
- * Computes a top-shadow for a card effect.
- *
- * @param {Number} $depth - depth level
- *
- * @return {List}
- */
+/// Computes a top-shadow for a card effect.
+/// @param {Number} $depth - depth level
+/// @return {List}
 @function top-shadow($depth) {
   $primary-offset: nth(1.5 3 10 14 19, $depth) * 1px;
   $blur: nth(1.5 3 10 14 19, $depth) * 4px;
@@ -129,13 +97,9 @@
   @return 0 $primary-offset $blur $color;
 }
 
-/**
- * Computes a bottom-shadow for a card effect.
- *
- * @param {Number} $depth - depth level
- *
- * @return {List}
- */
+/// Computes a bottom-shadow for a card effect.
+/// @param {Number} $depth - depth level
+/// @return {List}
 @function bottom-shadow($depth) {
   $primary-offset: nth(1.5 3 6 10 15, $depth) * 1px;
   $blur: nth(1 3 3 5 6, $depth) * 4px;
