--- a/scss/utils/_helpers.scss
+++ b/scss/utils/_helpers.scss
@@ -1,11 +1,6 @@
-/**
- * Float clearing helper.
- *
- * @group helpers
- *
- * @param {Bool} $extend (true) - Whether or not extend a placeholder.
- */
-
+/// Float clearing helper.
+/// @group helpers
+/// @param {Bool} $extend (true) - Whether or not extend a placeholder.
 @mixin clearfix($extend: true) {
   @if $extend {
     @extend %clearfix;
@@ -20,25 +15,16 @@
   }
 }
 
-/**
- * Clearfix helper
- *
- * @requires {mixin} clearfix
- */
+/// Clearfix helper
+/// @requires {mixin} clearfix
 %clearfix {
   @include clearfix($extend: false);
 }
 
-/**
- * Accessibility hiding helper.
- *
- * @group helpers
- *
- * @param {Bool} $extend (true) - Whether or not extend a placeholder.
- *
- * @requires {mixin} size
- */
-
+/// Accessibility hiding helper.
+/// @group helpers
+/// @param {Bool} $extend (true) - Whether or not extend a placeholder.
+/// @requires {mixin} size
 @mixin visually-hidden($extend: true) {
   @if $extend {
     @extend %visually-hidden;
@@ -55,24 +41,16 @@
   }
 }
 
-/**
- * Accessibility hiding helper.
- *
- * @requires {mixin} visually-hidden
- */
+/// Accessibility hiding helper.
+/// @requires {mixin} visually-hidden
 %visually-hidden {
   @include visually-hidden($extend: false);
 }
 
 
-/**
- * Accessibility ellipsis helper.
- *
- * @group helpers
- *
- * @param {Bool} $extend (true) - Whether or not extend a placeholder.
- */
-
+/// Accessibility ellipsis helper.
+/// @group helpers
+/// @param {Bool} $extend (true) - Whether or not extend a placeholder.
 @mixin ellipsis($extend: true) {
   @if $extend {
     @extend %ellipsis;
@@ -85,11 +63,8 @@
   }
 }
 
-/**
- * Accessibility ellipsis helper.
- *
- * @requires {mixin} ellipsis
- */
+/// Accessibility ellipsis helper.
+/// @requires {mixin} ellipsis
 %ellipsis {
   @include ellipsis($extend: false);
 }
