--- a/scss/utils/_helpers.scss
+++ b/scss/utils/_helpers.scss
@@ -1,6 +1,6 @@
 /// Float clearing helper.
 /// @group helpers
-/// @param {Bool} $extend (true) - Whether or not extend a placeholder.
+/// @param {Bool} $extend [true] - Whether or not extend a placeholder.
 @mixin clearfix($extend: true) {
   @if $extend {
     @extend %clearfix;
@@ -23,7 +23,7 @@
 
 /// Accessibility hiding helper.
 /// @group helpers
-/// @param {Bool} $extend (true) - Whether or not extend a placeholder.
+/// @param {Bool} $extend [true] - Whether or not extend a placeholder.
 /// @requires {mixin} size
 @mixin visually-hidden($extend: true) {
   @if $extend {
@@ -50,7 +50,7 @@
 
 /// Accessibility ellipsis helper.
 /// @group helpers
-/// @param {Bool} $extend (true) - Whether or not extend a placeholder.
+/// @param {Bool} $extend [true] - Whether or not extend a placeholder.
 @mixin ellipsis($extend: true) {
   @if $extend {
     @extend %ellipsis;
