--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -1,6 +1,6 @@
 /// Mixin to size elements.
 /// @param {Number} $width           - Width
-/// @param {Number} $height ($width) - Height
+/// @param {Number} $height [$width] - Height
 @mixin size($width, $height: $width) {
   width: $width;
   height: $height;
@@ -11,8 +11,8 @@
 /// @link http://hugogiraudel.com/2013/08/05/offsets-sass-mixin/ Documentation
 /// @access private
 /// @requires {function} is-valid-length
-/// @param {String} $position      - Position type (either `absolute`, `fixed` or `relative`)
-/// @param {List}   $args     (()) - List of offsets and values
+/// @param {String} $position      - Position type [either `absolute`, `fixed` or `relative`]
+/// @param {List}   $args     [()] - List of offsets and values
 /// @throws Invalid value `$next` for offset `$offset`.
 @mixin position($position: null, $args: ()) {
   $offsets: top right bottom left;
@@ -103,8 +103,8 @@
 /// @requires {function} z
 /// @param {String} $direction                - Triangle direction
 /// @param {List}   $position                 - Triangle position
-/// @param {Color}  $color     (currentcolor) - Triangle color
-/// @param {Number} $size      (1em)          - Triangle size
+/// @param {Color}  $color     [currentcolor] - Triangle color
+/// @param {Number} $size      [1em]          - Triangle size
 /// @throws Direction must be one of top, right, bottom or left.
 @mixin triangle($direction, $position, $color: currentColor, $size: 1em) {
   $border: $size solid transparent;
@@ -153,7 +153,7 @@
 ///  @include prefixer('transform', 'translate(10px)');
 /// @param {String} $property                   - Property to prefix
 /// @param {*}      $value                      - Value for property
-/// @param {List}   $vendors  (webkit moz ms o) - Vendor prefixes to output
+/// @param {List}   $vendors  [webkit moz ms o] - Vendor prefixes to output
 @mixin prefixer($property, $value, $vendors: webkit moz ms o) {
   @if $vendors {
     @each $vendor in $vendors {
@@ -179,7 +179,7 @@
 
 /// Mixin handling inline-block and vertical-align at once.
 /// If no align is specified, then the `vertical-align` property won't be output.
-/// @param {String} $align (null) - Vertical align
+/// @param {String} $align [null] - Vertical align
 @mixin inline-block($align: null) {
   display: inline-block;
   vertical-align: $align;
@@ -187,7 +187,7 @@
 
 
 /// Gives a card depth effect.
-/// @param {Number} $depth - depth level (between 1 and 5)
+/// @param {Number} $depth - depth level [between 1 and 5]
 /// @link http://www.google.com/design/spec/layout/layout-principles.html#layout-principles-dimensionality Google Design
 /// @requires {function} clamp
 /// @requires {function} color
@@ -201,7 +201,7 @@
 
 /// Event wrapper.
 /// @author Harry Roberts
-/// @param {Bool} $self (false) - Whether or not to include current selector
+/// @param {Bool} $self [false] - Whether or not to include current selector
 /// @link https://twitter.com/csswizardry/status/478938530342006784 Original tweet from Harry Roberts
 @mixin on-event($self: false) {
     @if $self {
