--- a/scss/partials/_item.scss
+++ b/scss/partials/_item.scss
@@ -212,16 +212,6 @@
 }
 
 /**
- * Adds a preview of the variable if it is a color
- */
-.item__color-preview {
-  @include size(2em);
-  @include absolute(top .75em right .75em);
-  @include card(1);
-  border-radius: 8px;
-}
-
-/**
  * Require's description
  */
 .item__requires-description {
@@ -250,4 +240,17 @@
   position: relative;
   clear: both;
   margin-bottom: $vertical-rhythm;
+}
+
+.color-preview--inline {
+  padding: 2px 4px;
+  border: 1px solid rgba(black, .1);
+  border-radius: 3px;
+}
+
+.color-preview--block {
+  @include size(2em);
+  @include absolute(top .75em right .75em);
+  border: 1px solid rgba(black, .1);
+  border-radius: 3px;
 }
