--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -12,7 +12,7 @@
 $colors: (
   "pink":         #dd5a6f,
   "light-purple": #e9e4f1,
-  "purple":       #998099,
+  "purple":       #5c4863,
   "green":        #135c6a,
   "yellow":       #ffc93c,
   "light-grey":   #e0e0e0,
