--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -4,6 +4,10 @@
 .footer {
   background: color("light-grey");
   padding: 1em 0;
+
+  .container {
+    position: relative;
+  }
 }
 
 /**
@@ -17,7 +21,14 @@
  * "Built with SassDoc" mark.
  */
 .footer__watermark {
-  float: right;
+  position: absolute;
+  right: 0;
+  top: -0.7em;
+
+  img {
+    display: block;
+    max-width: 7em;
+  }
 }
 
 /**
