--- a/scss/partials/_searchbar.scss
+++ b/scss/partials/_searchbar.scss
@@ -6,7 +6,7 @@
   display: inline-block;
   float: right;
 
-  @include respond-to(small) {
+  @include respond-to('small') {
     display: block;
     float: none;
   }
@@ -19,11 +19,11 @@
   float: right;
   position: relative;
 
-  @include respond-to(small) {
+  @include respond-to('small') {
     float: none;
   }
 
-  @include respond-to(medium) {
+  @include respond-to('medium') {
     min-width: 15em;
   }
 }
@@ -33,7 +33,7 @@
  */
 .searchbar__field {
   border: none;
-  padding: .5em;
+  padding: 0.5em;
   font-size: 1em;
   margin: 0;
   width: 100%;
@@ -50,7 +50,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  z-index: z("default") + 1;
+  z-index: z('default') + 1;
 
   /**
    * Hidden when empty
@@ -60,11 +60,11 @@
   }
 
   .selected {
-    background: color("medium-grey");
+    background: $medium-grey;
   }
 
   li {
-    border-bottom: 1px solid color("light-grey");
+    border-bottom: 1px solid $light-grey;
 
     &:last-of-type {
       border: none;
@@ -73,11 +73,11 @@
 
   a {
     display: block;
-    padding: .5em;
-    font-size: .9em;
+    padding: 0.5em;
+    font-size: 0.9em;
 
     @include on-event {
-      background: color("light-grey");
+      background: $light-grey;
     }
   }
 
