--- a/scss/utils/_functions.scss
+++ b/scss/utils/_functions.scss
@@ -5,17 +5,17 @@
 @function opposite-direction($directions) {
   $opposite-directions: ();
   $direction-map: (
-    "top":    "bottom",
-    "right":    "left",
-    "bottom":    "top",
-    "left":    "right",
-    "ltr":       "rtl",
-    "rtl":       "ltr"
+    'top':    'bottom',
+    'right':    'left',
+    'bottom':    'top',
+    'left':    'right',
+    'ltr':       'rtl',
+    'rtl':       'ltr'
   );
 
   @each $direction in $directions {
     @if not map-has-key($direction-map, $direction) {
-      @warn "No opposite direction found for `#{$direction}`.";
+      @warn 'No opposite direction found for `#{$direction}`.';
       @return null;
     }
 
@@ -33,9 +33,8 @@
 /// @throws All parameters must be numbers for `clamp`.
 /// @return {Number | Null}
 @function clamp($value, $min, $max) {
-  @if type-of($value) != "number" or type-of($min) != "number" or type-of($max) != "number" {
-    @warn "All parameters must be numbers for `clamp`.";
-    @return null;
+  @if type-of($value) != 'number' or type-of($min) != 'number' or type-of($max) != 'number' {
+    @error 'All parameters must be numbers for `clamp`.';
   }
 
   @return if($value > $max, $max, if($value < $min, $min, $value));
@@ -53,28 +52,10 @@
 /// @return {Number | Null}
 @function z($layer) {
   @if not map-has-key($z-indexes, $layer) {
-    @warn "No z-index found for `#{$layer}`.";
+    @warn 'No z-index found for `#{$layer}`.';
   }
 
   @return map-get($z-indexes, $layer);
-}
-
-
-/// Color getter.
-/// @requires {variable} colors
-/// @requires SassCore::map-has-key <http://sass-lang.com/documentation/Sass/Script/Functions.html#map_has_key-instance_method>
-/// @example scss
-/// color: color("pink");
-/// @param {String} $color - Color to fetch
-/// @throws No color found for `$color`. Please make sure it is defined in `$colors` map.
-/// @return {Color | Null}
-@function color($color) {
-  @if not map-has-key($colors, $color) {
-    @warn "No color found for `#{$color}`. "
-        + "Please make sure it is defined in `$colors` map.";
-  }
-
-  @return map-get($colors, $color);
 }
 
 
@@ -82,7 +63,7 @@
 /// @param {*} $value - Value to test
 /// @return {Bool}
 @function is-valid-length($value) {
-  @return (type-of($value) == "number" and not unitless($value)) or index("auto" "initial" "inherit" 0, $value);
+  @return (type-of($value) == 'number' and not unitless($value)) or index('auto' 'initial' 'inherit' 0, $value);
 }
 
 
@@ -92,7 +73,7 @@
 @function top-shadow($depth) {
   $primary-offset: nth(1.5 3 10 14 19, $depth) * 1px;
   $blur: nth(1.5 3 10 14 19, $depth) * 4px;
-  $color: rgba(black, nth(.12 .16 .19 .25 .30, $depth));
+  $color: rgba(black, nth(0.12 0.16 0.19 0.25 0.30, $depth));
 
   @return 0 $primary-offset $blur $color;
 }
@@ -103,7 +84,7 @@
 @function bottom-shadow($depth) {
   $primary-offset: nth(1.5 3 6 10 15, $depth) * 1px;
   $blur: nth(1 3 3 5 6, $depth) * 4px;
-  $color: rgba(black, nth(.24 .23 .23 .22 .22, $depth));
+  $color: rgba(black, nth(0.24 0.23 0.23 0.22 0.22, $depth));
 
   @return 0 $primary-offset $blur $color;
 }
