--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,25 +1,46 @@
-/// Map of colors for quick grabbing.
-/// @prop {Color} pink [#c6538c] - pink
-/// @prop {Color} light-purple [#e9e4f1] - light purple
-/// @prop {Color} purple [#998099] - purple
-/// @prop {Color} green [#699] - green
-/// @prop {Color} light-grey [#e0e0e0] - light grey
-/// @prop {Color} medium-grey [#ddd] - medium grey
-/// @prop {Color} dark-grey [#444] - dark grey
-/// @prop {Color} white [#f9f9f9] - white
-/// @see {function} color
-/// @type Map
-$colors: (
-  "pink":         #dd5a6f,
-  "light-purple": #e9e4f1,
-  "purple":       #5c4863,
-  "green":        #135c6a,
-  "yellow":       #ffc93c,
-  "light-grey":   #e0e0e0,
-  "medium-grey":  #ddd,
-  "dark-grey":    #333,
-  "white":        #f9f9f9
-) !global;
+/// Pink
+/// @type Color
+$pink: #dd5a6f;
+
+
+/// Purple
+/// @type Color
+$purple: #5c4863;
+
+
+/// Yellow
+/// @type Color
+$yellow: #ffc93c;
+
+
+/// Black
+/// @type Color
+$black: #333;
+
+
+/// Primary color
+/// @type Color
+$primary-color: $pink;
+
+
+/// Primary color
+/// @type Color
+$secondary-color: $yellow;
+
+
+/// Primary color
+/// @type Color
+$tertiary-color: $purple;
+
+
+/// Light grey
+/// @type Color
+$light-grey: #e0e0e0;
+
+
+/// Medium
+/// @type Color
+$medium-grey: #ddd;
 
 
 /// Map of breakpoints for responsive design.
@@ -28,8 +49,8 @@ $colors: (
 /// @see {mixin} respond-to
 /// @type Map
 $breakpoints: (
-  "small":  (max-width: 800px),
-  "medium": (min-width: 801px)
+  'small':  (max-width: 800px),
+  'medium': (min-width: 801px)
 ) !global;
 
 
@@ -38,12 +59,12 @@ $breakpoints: (
 /// @see {function} z
 /// @type Map
 $z-indexes: (
-  "goku":       9001,
-  "modal":      5000,
-  "dropdown":   4000,
-  "social":     3000,
-  "default":       1,
-  "below":        -1
+  'goku':       9001,
+  'modal':      5000,
+  'dropdown':   4000,
+  'social':     3000,
+  'default':       1,
+  'below':        -1
 ) !global;
 
 
