--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -8,70 +8,44 @@
 
 
 /// Shorthand for positioning.
-/// @link http://hugogiraudel.com/2013/08/05/offsets-sass-mixin/ Documentation
 /// @access private
-/// @requires {function} is-valid-length
-/// @param {String} $position      - Position type [either `absolute`, `fixed` or `relative`]
-/// @param {List}   $args     [()] - List of offsets and values
-/// @throws Invalid value `$next` for offset `$offset`.
-@mixin position($position: null, $args: ()) {
-  $offsets: top right bottom left;
+/// @param {String} $position - Position type (either `absolute`, `fixed` or `relative`)
+/// @param {Length} $top [null] - Top offset
+/// @param {Length} $right [null] - Right offset
+/// @param {Length} $bottom [null] - Bottom offset
+/// @param {Length} $left [null] - Left offset
+@mixin position($position, $top: null, $right: null, $bottom: null, $left: null) {
   position: $position;
-
-  @each $offset in $offsets {
-    $index: index($args, $offset);
-
-    @if $index {
-      @if $index == length($args) {
-        #{$offset}: 0;
-      }
-
-      @else {
-        $next: nth($args, $index + 1);
-
-        @if is-valid-length($next) {
-          #{$offset}: $next;
-        }
-
-        @else if index($offsets, $next) {
-          #{$offset}: 0;
-        }
-
-        @else {
-          @error 'Invalid value `#{$next}` for offset `#{$offset}`.';
-        }
-      }
-    }
-  }
+  top: $top;
+  right: $right;
+  bottom: $bottom;
+  left: $left;
 }
 
 
 /// Shorthand for absolute positioning.
-/// @link http://hugogiraudel.com/2014/05/19/new-offsets-sass-mixin/ Documentation
 /// @requires {mixin} position
-/// @param {List} $args - List of offsets and values
+/// @param {Arglist} $args - Offsets
 /// @example scss - Stretch an item over its parent.
-///  @include absolute(top 0 right 0 bottom 0 left 0)
-@mixin absolute($args) {
-  @include position(absolute, $args);
+///  @include absolute($top: 0, $right: 0, $bottom: 0, $left: 0)
+@mixin absolute($args...) {
+  @include position(absolute, $args...);
 }
 
 
 /// Shorthand for relative positioning.
-/// @link http://hugogiraudel.com/2014/05/19/new-offsets-sass-mixin/ Documentation
 /// @requires {mixin} position
-/// @param {List} $args - List of offsets and values
-@mixin relative($args) {
-  @include position(relative, $args);
+/// @param {Arglist} $args - Offsets
+@mixin relative($args...) {
+  @include position(relative, $args...);
 }
 
 
 /// Shorthand for fixed positioning.
-/// @link http://hugogiraudel.com/2014/05/19/new-offsets-sass-mixin/ Documentation
 /// @requires {mixin} position
-/// @param {List} $args - List of offsets and values
-@mixin fixed($args) {
-  @include position(fixed, $args);
+/// @param {Arglist} $args - Offsets
+@mixin fixed($args...) {
+  @include position(fixed, $args...);
 }
 
 
@@ -92,43 +66,6 @@
   @else {
     @error 'No value found for `#{$breakpoint}`. '
          + 'Please make sure it is defined in `$breakpoints` map.';
-  }
-}
-
-
-/// Mixin to fake CSS triangles with border hacks.
-/// @requires {mixin} absolute
-/// @requires {mixin} size
-/// @requires {function} opposite-direction
-/// @requires {function} z
-/// @param {String} $direction                - Triangle direction
-/// @param {List}   $position                 - Triangle position
-/// @param {Color}  $color     [currentcolor] - Triangle color
-/// @param {Number} $size      [1em]          - Triangle size
-/// @throws Direction must be one of top, right, bottom or left.
-@mixin triangle($direction, $position, $color: currentColor, $size: 1em) {
-  $border: $size solid transparent;
-
-  @if not index(top right bottom left, $direction) {
-    @error 'Direction must be one of top, right, bottom or left.';
-  }
-
-  @else {
-    @include absolute($position);
-    @include size(0);
-    content: '';
-    z-index: z('default') + 1;
-    border-#{opposite-direction($direction)}: ($size * 1.5) solid $color;
-
-    @if $direction == top or $direction == bottom {
-      border-left: $border;
-      border-right: $border;
-    }
-
-    @else if $direction == right or $direction == left {
-      border-bottom: $border;
-      border-top: $border;
-    }
   }
 }
 
