--- a/scss/partials/_sidebar.scss
+++ b/scss/partials/_sidebar.scss
@@ -11,6 +11,9 @@
     border-right: 1px solid $light-grey;
     transition: .2s cubic-bezier(0.215, 0.61, 0.355, 1);
   }
+  @include respond-to('small') {
+	margin-top: 4em;
+  }
 }
 
 /**
