--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -50,6 +50,7 @@
   text-transform: uppercase;
   font-weight: bold;
   padding-top: 0;
+  margin-bottom: $vertical-rhythm * -2;
   position: relative;
 
   .container {
