changed target area on titles to work with fixed search box

--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -63,6 +63,7 @@
   text-transform: uppercase;
   font-weight: bold;
   padding-top: 0;
+  margin-bottom: $vertical-rhythm * -2;
   position: relative;
 
   .container {
