--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -8,7 +8,7 @@
   padding: 1em 0;
   background: $primary-color;
   color: $light-grey;
-  z-index: z("dropdown");
+  z-index: z('dropdown');
   
   @include respond-to('small') {
 	left: 0;
