--- a/scss/partials/_item.scss
+++ b/scss/partials/_item.scss
@@ -7,7 +7,7 @@
  */
 .item__heading {
   color: $black;
-  margin: 0 0 $vertical-rhythm 0;
+  margin: margin-top: $vertical-rhythm * 3 0 $vertical-rhythm 0;
   position: relative;
   font-size: 2em;
   font-weight: 300;
@@ -208,6 +208,7 @@
   float: right;
   padding-top: 0.9em;
   color: darken($medium-grey, 10%);
+  margin-top: $vertical-rhythm * 3;
   margin-bottom: 1em;
 }
 
