--- a/scss/partials/_item.scss
+++ b/scss/partials/_item.scss
@@ -7,7 +7,7 @@
  */
 .item__heading {
   color: $black;
-  margin: margin-top: $vertical-rhythm * 3 0 $vertical-rhythm 0;
+  margin: $vertical-rhythm * 3 0 $vertical-rhythm 0;
   position: relative;
   font-size: 2em;
   font-weight: 300;
