--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -82,3 +82,10 @@
     background-color: $primary-color;
   }
 }
+
+/**
+ * Main descriptions
+ */
+.main__description {
+  margin-bottom: $vertical-rhythm;
+}
