[swig to njk] Renamed all files to .njk

--- a/views/includes/partials/item.html.njk
+++ b/views/includes/partials/item.html.njk
@@ -1,15 +1,15 @@
 <section class="main__item  container  item{% if item.alias %}  item--alias{% endif %}{% if 'deprecated'|in(item) %}  item--deprecated{% endif %}" id="{{ group_name }}-{{ item.context.type }}-{{ item.context.name }}">
 
-{% include '../annotations/name.html.swig' %}
+{% include '../annotations/name.html.njk' %}
 
-{% include '../annotations/deprecated.html.swig' %}
+{% include '../annotations/deprecated.html.njk' %}
 
-{% include '../annotations/preview.html.swig' %}
+{% include '../annotations/preview.html.njk' %}
 
 {% if not item.alias %}
 
   {% for annotation in display.annotations[item.context.type] %}
-    {% set path = '../annotations/' + annotation + '.html.swig' %}
+    {% set path = '../annotations/' + annotation + '.html.njk' %}
     {% include path %}
   {% endfor %}
 
